# ShieldBattery

./: .babelrc  .cursorrules  .dockerignore  .editorconfig  .env  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .jshintrc  .npmrc  .prettierrc  .tokeignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  LICENSE  README.md  ShieldBattery.sln  app.js  babel-register-hook.js  babel-register.js  babel.config.js  babel.config.json  build-installer.bat  build_node.bat  common.webpack.config.js  config.example.js  database.example.json  db-migrate  db-migrate.cmd  db.js  deploy.bat  dev-server.js  docker-compose.yml  (+44 more)
game/: .gitignore  Cargo.toml  README.md  app.js  build.bat  build.rs  game.gyp  index.js  package.json  vcbuild.bat  webpack.config.js  webpack.dev.config.js
game/.cargo/: config
game/common/: func_hook.cpp  func_hook.h  string_helpers.cpp  string_helpers.h  win_helpers.cpp  win_helpers.h
game/compile-shaders/: Cargo.toml
game/compile-shaders/src/: lib.rs
game/files/: dummy.anim
game/files/fonts/: DoHyeon-LICENSE.txt  SofiaSans-LICENSE.txt
game/forge/: README.md  com_utils.h  direct_x.cpp  direct_x.h  fonts.cpp  fonts.h  forge.cpp  forge.h  indirect_draw.cpp  indirect_draw.h  open_gl.h  renderer.h
game/js/: .babelrc  game-initializer.js  game-types.js  init-game.js  logger.js
game/js/natives/: bw.js  chat-handler.js  forge.js  snp.js
game/js/shieldbattery/: init-game.js
game/node-bw/: brood_war.cpp  brood_war.h  immediate.h  observing_patches.cpp  observing_patches.h  wrapped_brood_war.cpp
game/overlay-ui/: Cargo.toml  watch-preview.mjs
game/overlay-ui/src/: colors.rs  disconnect.rs  lib.rs  netstat.rs  style.rs
game/rust-dll/: Cargo.toml
game/rust-dll/.cargo/: config
game/rust-dll/src/: app_socket.rs  bw.rs  cancel_token.rs  client_messages.rs  client_socket.rs  game_state.rs  game_thread.rs  lib.rs  network_manager.rs  rally_point.rs  route_manager.rs  snp.rs  storm.rs  udp.rs  windows.rs
game/scr-analysis/: Cargo.toml
game/scr-analysis/src/: lib.rs
game/shieldbattery/: settings.h  shieldbattery.cpp  shieldbattery.props
game/snp/: functions.cpp
game/src/: app_messages.rs  app_socket.rs  bw.rs  bw_1161.rs  bw_scr.rs  cancel_token.rs  chat.rs  crash_dump.rs  debug_control.rs  game_state.rs  game_thread.rs  hook_macro.rs  lib.rs  network_manager.rs  observing.rs  rally_point.rs  recurse_checked_mutex.rs  replay.rs  snp.rs  storm.rs  sync.rs  team_colors.rs  udp.rs  windows.rs
game/src/bw/: apm_stats.rs  (+4 more)
game/v8-helpers/: helpers.cpp  helpers.h
server-rs/: .dockerignore  Cargo.toml  Dockerfile  run-dev-server.bat
server-rs/.sqlx/: query-01d8188a6f24d0395a69fa28fc537d6f7823a489a9a008458810e19907470780.json  query-0364bf34e5b44132cc6537ab9fb05a40715eca86badf57823144c6b23d039508.json  query-05fedb5d33abb96394e9a74f320772f161c0ebe8b582410de14692921182cbec.json  query-06f1b9b3dd253a945e3de2d3e3b915d8bb21fc90a8e85604cf731627dd648e55.json  query-07a513620a01e4f27c7c778a1a4b3d9cd0513af35de378147f704a88bcb95cef.json  query-092608e1bb06bad2efd88347bbe323aaca9d00a330812a31557d710679c9738f.json  query-0c79f1823f8901d630c188892df792fb296772c9f680a4abfd5ba82db3679506.json  query-0d741812dd30ab3faf2148c0832c6075730a392303e6035b229b35561d8509d2.json  query-0ef8fbec06546f4b2bcaf2718733f23bcafa0ba4b615976925416596ded50018.json  query-101b63ac4d92ff06e21b4d474a57792a37c071e6065536a153cb1897e11a069e.json  query-12a150aa7c6f19680313028da6f17cad7b268b9a57501e48cedbb62cbbd0d140.json  query-1524acf4f2e45d92a005ca58c3e1c9fcbe34f86d1385b2fa53ede58866b858af.json  query-15ab5ba3bb45fa2bb7fd3c8c05aaed20e3bc6a2e06f9e71f4c90dc9989879ac9.json  query-1667915dfbef6831be80f975d641a113e14572afc960aa028538f34814d18118.json  query-196b98256dc1d451fcf2c1763bed2175c65a5d71d95f4a73a77e1a33587ca1a4.json  query-19b23164a396332217695e61e889095a18b7d77b139394a55c205cb2aa0eb1a7.json  query-1b1e9601db57d62cba100678383e7b413e7b398e9259b55b76138686293fa4af.json  query-1e2c685da77f52b467565fc52eab4b490a99e1fbf6987814a9fe1f4c9ab4c552.json  query-1e53f20b34db61a12de11fcee1f2e00cce2c828b3222e13598574b02727e98fc.json  query-2086a4ea47af5133aaee208a742f02a573680a008c239a9a50b946e1be279241.json  query-21e5b5001a45cdf01930c7e4db1f4f800d59993957aa8d5b646cdecda71cfbfd.json  query-25f451c72a6e35d9cc8464873c8b217f8bb1eaed6e17153fe73f4390d5b51bbe.json  query-2c77436b243a6fb54618b15157db94e3bf027cc62ff1db542f43ffbb9f293327.json  query-2eac6df5cd3dffe2e7d1ddd823e355db4ae40731b9bf04eff84de015c8493f04.json  query-2ef188eb9416f69de5aaf2fb71bdbc9afcde9a5a2385c52d4b6876953ad754b3.json  query-357295e85989922147bee0610e9b3090991d3d7ce8d28896dad67425ca0da492.json  query-377b3e60e5f76c93e6a85dbb61cf9d2167828296b85801a58cea6d0039410ba2.json  query-37b800bb87c242ad3a2593b5d36f294ff0d2883c7ce0019daf0a270c7dbbd3ec.json  query-3867021fe1d38d0091309490b2956f3b82c9face69ea535ebd02af98f620d66f.json  query-389e2c45660dd9d7779d0625c51728d6aae7834c7cf476af000bd55e355eb8a7.json  query-3d6d3c816dec68620619a7450b7e7368932a7fcf2486de9205b2f949177c6e23.json  query-40cd206084fe38a3e13477db8a8e6d34f5fe0b4881626721673be02697214cb8.json  query-40f1462622deb9cac40bb9af52e7a5c44962f3815cd8ebddafb07f422e15bbea.json  query-4760f4247d5547894d9a02ab04f0e3aa128ab02673262ebaf85643151c3123de.json  query-47ac9a7759fc77f07a82afa2375e7af253fa3a2f0baeff4df162ddbda50ec9a4.json  query-4bd088310ce544d4c69a4a44cac3a9f30ad043df041b380988c173c4c6720c33.json  query-4f315b1f702aeea4fbcfe6198b95ff0e56e7caa865345e14a20c5b4f2ffa70d5.json  query-51d597855b17b16f4836e4212b50edc4c569c2bea80eaa3bf5656e1bd1800337.json  query-526045c4bd70acd66aacc0083760fc625bd8b503679c3efefbe3f40a3fbcecfd.json  query-5620d6c8ca9fcc4a18df6f70719c52495980b7863e60e285d942f40290397508.json  (+75 more)
server-rs/benches/: matchmaker.rs
server-rs/src/: async_rayon.rs  configuration.rs  email.rs  errors.rs  file_store.rs  game_reports.rs  games.rs  leagues.rs  lib.rs  main.rs  maps.rs  matchmaking.rs  news.rs  pubsub.rs  random_code.rs  redis.rs  routes.rs  schema.rs  sessions.rs  state.rs  telemetry.rs  twitch.rs
(+2916 files in other folders)
