[package]
name = "server"
version = "0.1.0"
edition = "2021"

default-run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen-schema.rs"

[dependencies]
async-graphql = { version = "7.0", features = [
  "chrono",
  "dataloader",
  "tracing",
  "uuid",
] }
async-graphql-axum = "7.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-prometheus = "0.7"
bcrypt = "0.15"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
chrono = "0.4"
data-encoding = "2.4"
dotenvy = "0.15"
gethostname = "0.5"
ipnetwork = "0.20"
jsonwebtoken = "9.3"
mobc = "0.8"
mobc-redis = "0.8"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.12", default-features = false, features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
typeshare = "1.0"
uuid = { version = "1.11", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "chrono",
  "ipnetwork",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]

[dependencies.tower-http]
version = "0.6"
features = [
  "add-extension",
  "compression-full",
  "cors",
  "request-id",
  "sensitive-headers",
  "timeout",
  "trace",
  "util",
]

[dev-dependencies]
mockito = "1.1"

# Improve performance of color-eyre in dev
[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.bcrypt]
opt-level = 3

# For bcrypt perf
[profile.dev.package.blowfish]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace]
