[package]
name = "server"
version = "0.1.0"
edition = "2024"

default-run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen-schema.rs"

[[bench]]
name = "matchmaker"
harness = false

[dependencies]
arc-swap = "1"
async-graphql = { version = "7.2", features = [
  "chrono",
  "dataloader",
  "tracing",
  "uuid",
] }
async-graphql-axum = "7.2"
async-trait = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.137"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-client-ip = "1.3"
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-prometheus = "0.10"
base64 = "0.22"
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
data-encoding = "2.11"
deadpool-redis = "0.23"
dotenvy = "0.15"
gethostname = "1.1"
enumset = "1.1"
ipnetwork = { version = "0.21", features = ["serde"] }
itertools = "0.15"
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs"] }
metrics = "0.24"
rand = "0.10"
rayon = "1.12"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "brotli",
  "deflate",
  "form",
  "gzip",
  "json",
  "rustls",
] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
typeshare = "1.0"
url = { version = "2.5" }
uuid = { version = "1.23", features = ["v4"] }
serde_with = "3.21"

[dependencies.sqlx]
version = "0.9"
default-features = false
features = [
  "chrono",
  "ipnetwork",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring-webpki",
  "uuid",
]

[dependencies.tower-http]
version = "0.7"
features = [
  "add-extension",
  "compression-full",
  "cors",
  "normalize-path",
  "request-id",
  "sensitive-headers",
  "timeout",
  "trace",
  "util",
]

[dev-dependencies]
criterion = "0.8"
mockito = "1.7"

# Enable more optimizations for dependencies in dev, but not for our code
[profile.dev.package."*"]
opt-level = 3

[workspace]
