[package]
name = "shieldbattery-rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "shieldbattery_rust"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
debug = 1
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
backtrace = "0.3"
byteorder = "1.3.1"
bytes = "0.4.12"
chrono = "0.4.6"
fern = "0.5"
futures = "0.1.25"
lazy_static = "1.3"
libc = "0.2.50"
log = "0.4"
quick-error = "1.2.2"
rand = "0.6.5"
scopeguard = "0.3.2"
serde = { version = "1.0.89", features = ["derive", "rc"] }
serde_json = "1.0.39"
tokio = "0.1.18"
websocket = "0.22.3"

[dependencies.winapi]
version = "0.3.3"
features = [
    "combaseapi", "dsound", "debugapi", "d3d11", "dxgi", "errhandlingapi", "handleapi",
    "knownfolders", "libloaderapi", "memoryapi", "processthreadsapi", "shlobj", "stringapiset",
    "synchapi", "sysinfoapi", "unknwnbase", "winuser", "wingdi", "winsock2", "ws2def", "ws2ipdef",
]

[dependencies.whack]
git = "https://github.com/neivv/whack/"
